openldap/ldap-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: public-service
  labels:
    app: openldap
  name: ldap-service
spec:
  ports:
    - port: 389
  selector:
    app: openldap
