openldap/phpldapadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: public-service
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: phpldapadmin
  name: phpldapadmin
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 80
  selector:
    io.kompose.service: phpldapadmin
status:
  loadBalancer: {}
